# dart

./: .dockerignore  .env_sample  .gitignore  Dockerfile  Dockerfile.dev  MIGRATION.md  README.md  dart.sqlite3-journal  docker-compose.yml  main.py  manage.py  pyproject.toml  requirements.txt  run_daphne.py  server.bat  settings.py  start_dart.bat  update.bat  version.txt  
bio_tables/: apps.py  models.py  sync_tables.py
bio_tables/fixtures/: bcanalysis.json  bccollectionmethod.json  bcdatacenter.json  bcdataretrieval.json  bcdatatype.json  bcgear.json  bclifehistory.json  bcnatnltaxoncode.json  bcpreservation.json  bcprocedure.json  bcsamplehandling.json  bcsex.json  bcstorage.json  bcunit.json  bcvolumemethod.json  biochem_fixtures.json  default_biochem_fixtures.json
bio_tables/migrations/: 0001_initial.py  0002_bcupdate.py  0003_bclifehistory_bcsex.py  0004_alter_bclifehistory_data_center_code_and_more.py  0005_bcvolumemethod_bcprocedure_bccollectionmethod.py
bio_tables/tests/: BioTableFactoryFloor.py
biochem/: MergeTables.py  download.py  models.py  upload.py
biochem/migrations/: 0001_initial.py  0002_bcactivityedits_bcbatches_bcerrorcodes_bcerrors_and_more.py  0002_bclifehistories_bcsexes.py  0003_bccollectionmethods.py  0003_bccommentedits_bcdiscretedtailedits_and_more.py  0004_bcplanktndtailedits_bcplanktnfreqedits_and_more.py  0004_bcprocedures_bcvolumemethods.py  0005_bcdiscretehedrs_bcevents_bcmissions.py  0006_bcactivities_bcdiscretedtails_bclockedmissions_and_more.py  0007_bccommenteditsdel_bcdiscretereplicteditsdel.py
biochem/tests/: BCFactoryFloor.py  TestMissionMerge.py
config/: asgi.py  components.py  consumers.py  generic_views.py  middleware.py  routers.py  routing.py  scripts.py  settings.py  urls.py  utils.py  views.py  wsgi.py
config/settings/: base_settings.py
config/tests/: DartTestCase.py  TestUtils.py  test_components.py  test_utils.py
core/: apps.py  consumer.py  filters.py  form_biochem_batch.py  form_biochem_batch2.py  form_biochem_batch2_discrete.py  form_biochem_batch2_plankton.py  form_biochem_batch_discrete.py  form_biochem_batch_plankton.py  form_biochem_database.py  form_biochem_discrete.py  form_biochem_mission_summary.py  form_biochem_plankton.py  form_biochem_pre_validation.py  form_biochem_validation.py  form_btl_load.py  form_event_details.py  form_mission_gear_type.py  form_mission_sample_filter.py  form_mission_sample_type.py  form_mission_settings.py  form_mission_trip.py  form_plankton_load.py  form_sample_type_config.py  form_validation_biochem.py  forms.py  htmx.py  models.py  reports.py  routing.py  urls.py  utils.py  validation.py  views.py  views_biochem.py  views_mission_event.py  views_mission_gear_type.py  views_mission_plankton.py  views_mission_sample.py  views_mission_sample_type.py  (+2 more)
core/fixtures/: core_fixtures.json  sample_type_fixtures.json
core/migrations/: 0001_initial.py  0001_squashed_0022_alter_biochemupload_modified_date.py  0002_DO_NOT_SQUASH_OR_DELETE_create_global_sample_type.py  0002_alter_action_latitude_alter_action_longitude.py  0002_alter_discretesamplevalue_sample.py  0002_alter_error_type_alter_fileerror_type.py  (+95 more)
dart/: apps.py  asgi.py  db_router.py  db_routers.py  models.py  routers.py  scripts.py  settings.py  urls.py  utils.py  views.py  wsgi.py
dart2/: asgi.py  db_routers.py  settings.py  urls.py  utils.py  views.py  wsgi.py
docs/: BC_load-tables_best-practices.docx  UserDoc.docx  dart_db_model.mwb  dart_db_model.mwb.bak  db_model.uml  form_sample_type_config_flowchart.mmd  urls.py  views.py
file_configs/: btl.json
fix_stations/: HL_0.csv  HL_02.csv
scripts/: output_comparison.py  utils.py
settingsdb/: apps.py  filters.py  form_sample_file_config.py  models.py  urls.py  utils.py  views.py
startup/: git_update.bat  update.bat
static/: dart.css
templates/: FixStationTemplate.xlsx  base.html  card_template.html  collapsable_card_template.html  field.html  field_with_buttons.html  generic_create.html  generic_details.html  generic_filter.html  inputs.html  modal.html  navbar.html
user_settings/: apps.py  models.py
(+247 files in other folders)
